fix z-index on nav

--- a/skillsquire/views/css/sass/_layout.scss
+++ b/skillsquire/views/css/sass/_layout.scss
@@ -57,6 +57,7 @@
     position: fixed;
     top: $top-margin;
     right: 0;
+    z-index: 5;
     
     display: none;
   }
